fixed the z-index again

--- a/_scss/_header.scss
+++ b/_scss/_header.scss
@@ -9,7 +9,7 @@ $color3: #903749; //Maroon
 nav {
 	background-color: $baseColor;
 	position: fixed;
-	z-index: 1;
+	z-index: 6;
 	width: 100%;
 	height: $headerHeight;
 	ul {
